// Vitest Snapshot v1

exports[`emits a custom time range > Defaults to since mode 1`] = `
<div
  className="navbar-item has-dropdown is-hoverable"
>
  <a
    className="navbar-link"
  >
    Search
  </a>
  <div
    className="navbar-dropdown is-right"
  >
    <span
      className="navbar-item"
    >
      <div
        className="control"
      >
        <label
          className="radio"
        >
          <input
            data-testid="radio-since"
            defaultChecked={true}
            name="mode"
            onClick={[Function]}
            type="radio"
            value="since"
          />
           Since
        </label>
        <label
          className="radio"
        >
          <input
            data-testid="radio-range"
            defaultChecked={false}
            name="mode"
            onClick={[Function]}
            type="radio"
            value="range"
          />
           Range
        </label>
      </div>
    </span>
    <span
      className="navbar-item"
    >
      <div
        className="select is-fullwidth"
      >
        <select
          onChange={[Function]}
        >
          <option
            value={3600000}
          >
            Past 1 hour
          </option>
          <option
            value={14400000}
          >
            Past 4 hours
          </option>
          <option
            value={43200000}
          >
            Past 12 hours
          </option>
          <option
            value={86400000}
          >
            Past 1 day
          </option>
        </select>
      </div>
    </span>
    <span
      className="navbar-item"
    >
      <div
        className="field is-grouped is-grouped-centered"
      >
        <p
          className="control"
        >
          <button
            className="button is-primary"
            onClick={[Function]}
          >
            Search
          </button>
        </p>
      </div>
    </span>
  </div>
</div>
`;

exports[`emits a custom time range > Switched to range mode with custom range 1`] = `
<div
  className="navbar-item has-dropdown is-hoverable"
>
  <a
    className="navbar-link"
  >
    Search
  </a>
  <div
    className="navbar-dropdown is-right"
  >
    <span
      className="navbar-item"
    >
      <div
        className="control"
      >
        <label
          className="radio"
        >
          <input
            data-testid="radio-since"
            defaultChecked={false}
            name="mode"
            onClick={[Function]}
            type="radio"
            value="since"
          />
           Since
        </label>
        <label
          className="radio"
        >
          <input
            data-testid="radio-range"
            defaultChecked={true}
            name="mode"
            onClick={[Function]}
            type="radio"
            value="range"
          />
           Range
        </label>
      </div>
    </span>
    <span
      className="navbar-item"
    >
      <div
        className="field"
      >
        <label
          className="label"
          htmlFor="dti-From"
        >
          From
        </label>
        <div
          className="control"
        >
          <input
            className="input is-fullwidth datetime-input"
            data-testid="datetimeinput-From"
            id="dti-From"
            onChange={[Function]}
            title="2022-01-01T02:00"
            type="datetime-local"
            value="2022-01-01T02:00"
          />
        </div>
      </div>
    </span>
    <span
      className="navbar-item"
    >
      <div
        className="field"
      >
        <label
          className="label"
          htmlFor="dti-To"
        >
          To
        </label>
        <div
          className="control"
        >
          <input
            className="input is-fullwidth datetime-input"
            data-testid="datetimeinput-To"
            id="dti-To"
            onChange={[Function]}
            title="2022-01-02T02:00"
            type="datetime-local"
            value="2022-01-02T02:00"
          />
        </div>
      </div>
    </span>
    <span
      className="navbar-item"
    >
      <div
        className="field is-grouped is-grouped-centered"
      >
        <p
          className="control"
        >
          <button
            className="button is-primary"
            onClick={[Function]}
          >
            Search
          </button>
        </p>
      </div>
    </span>
  </div>
</div>
`;

exports[`renders on since mode by default (rtl) > Defaults to since mode 1`] = `
<DocumentFragment>
  <div
    class="navbar-item has-dropdown is-hoverable"
  >
    <a
      class="navbar-link"
    >
      Search
    </a>
    <div
      class="navbar-dropdown is-right"
    >
      <span
        class="navbar-item"
      >
        <div
          class="control"
        >
          <label
            class="radio"
          >
            <input
              checked=""
              data-testid="radio-since"
              defaultvalue="since"
              name="mode"
              type="radio"
              value="since"
            />
             Since
          </label>
          <label
            class="radio"
          >
            <input
              data-testid="radio-range"
              defaultvalue="range"
              name="mode"
              type="radio"
              value="range"
            />
             Range
          </label>
        </div>
      </span>
      <span
        class="navbar-item"
      >
        <div
          class="select is-fullwidth"
        >
          <select>
            <option
              value="3600000"
            >
              Past 1 hour
            </option>
            <option
              value="14400000"
            >
              Past 4 hours
            </option>
            <option
              value="43200000"
            >
              Past 12 hours
            </option>
            <option
              value="86400000"
            >
              Past 1 day
            </option>
          </select>
        </div>
      </span>
      <span
        class="navbar-item"
      >
        <div
          class="field is-grouped is-grouped-centered"
        >
          <p
            class="control"
          >
            <button
              class="button is-primary"
            >
              Search
            </button>
          </p>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders on since mode by default > Defaults to since mode 1`] = `
<div
  className="navbar-item has-dropdown is-hoverable"
>
  <a
    className="navbar-link"
  >
    Search
  </a>
  <div
    className="navbar-dropdown is-right"
  >
    <span
      className="navbar-item"
    >
      <div
        className="control"
      >
        <label
          className="radio"
        >
          <input
            data-testid="radio-since"
            defaultChecked={true}
            name="mode"
            onClick={[Function]}
            type="radio"
            value="since"
          />
           Since
        </label>
        <label
          className="radio"
        >
          <input
            data-testid="radio-range"
            defaultChecked={false}
            name="mode"
            onClick={[Function]}
            type="radio"
            value="range"
          />
           Range
        </label>
      </div>
    </span>
    <span
      className="navbar-item"
    >
      <div
        className="select is-fullwidth"
      >
        <select
          onChange={[Function]}
        >
          <option
            value={3600000}
          >
            Past 1 hour
          </option>
          <option
            value={14400000}
          >
            Past 4 hours
          </option>
          <option
            value={43200000}
          >
            Past 12 hours
          </option>
          <option
            value={86400000}
          >
            Past 1 day
          </option>
        </select>
      </div>
    </span>
    <span
      className="navbar-item"
    >
      <div
        className="field is-grouped is-grouped-centered"
      >
        <p
          className="control"
        >
          <button
            className="button is-primary"
            onClick={[Function]}
          >
            Search
          </button>
        </p>
      </div>
    </span>
  </div>
</div>
`;

exports[`renders on since mode by default > Switched to range mode with custom range 1`] = `
<div
  className="navbar-item has-dropdown is-hoverable"
>
  <a
    className="navbar-link"
  >
    Search
  </a>
  <div
    className="navbar-dropdown is-right"
  >
    <span
      className="navbar-item"
    >
      <div
        className="control"
      >
        <label
          className="radio"
        >
          <input
            data-testid="radio-since"
            defaultChecked={false}
            name="mode"
            onClick={[Function]}
            type="radio"
            value="since"
          />
           Since
        </label>
        <label
          className="radio"
        >
          <input
            data-testid="radio-range"
            defaultChecked={true}
            name="mode"
            onClick={[Function]}
            type="radio"
            value="range"
          />
           Range
        </label>
      </div>
    </span>
    <span
      className="navbar-item"
    >
      <div
        className="field"
      >
        <label
          className="label"
          htmlFor="dti-From"
        >
          From
        </label>
        <div
          className="control"
        >
          <input
            className="input is-fullwidth datetime-input"
            data-testid="datetimeinput-From"
            id="dti-From"
            onChange={[Function]}
            title="2022-01-01T02:00"
            type="datetime-local"
            value="2022-01-01T02:00"
          />
        </div>
      </div>
    </span>
    <span
      className="navbar-item"
    >
      <div
        className="field"
      >
        <label
          className="label"
          htmlFor="dti-To"
        >
          To
        </label>
        <div
          className="control"
        >
          <input
            className="input is-fullwidth datetime-input"
            data-testid="datetimeinput-To"
            id="dti-To"
            onChange={[Function]}
            title="2022-01-02T02:00"
            type="datetime-local"
            value="2022-01-02T02:00"
          />
        </div>
      </div>
    </span>
    <span
      className="navbar-item"
    >
      <div
        className="field is-grouped is-grouped-centered"
      >
        <p
          className="control"
        >
          <button
            className="button is-primary"
            onClick={[Function]}
          >
            Search
          </button>
        </p>
      </div>
    </span>
  </div>
</div>
`;
